--- a/templates/apps/degree-calculator.html
+++ b/templates/apps/degree-calculator.html
@@ -1,1 +1,12 @@
-<form class="degree-calculator flexrow" autocomplete="off"><span>{{ localize "MNM3E.DegreeCalculator" }}:</span><input class="roll" type="number" name="roll" placeholder="{{ localize 'MNM3E.Roll' }}"/><span>{{ localize "MNM3E.VersusAbbrev" }}</span><input class="dc" type="number" name="dc" placeholder="{{ localize 'MNM3E.DC' }}"/><span>=</span><div class="degrees no-input"></div></form>
+<form class="degree-calculator flexrow" autocomplete="off">
+    <span>
+        {{ localize "MNM3E.DegreeCalculator" }}:
+    </span>
+    <input class="roll" type="number" name="roll" placeholder="{{ localize 'MNM3E.Roll' }}" />
+    <span>
+        {{ localize "MNM3E.VersusAbbrev" }}
+    </span>
+    <input class="dc" type="number" name="dc" placeholder="{{ localize 'MNM3E.DC' }}" />
+    <span>=</span>
+    <div class="degrees no-input"></div>
+</form>
