--- a/templates/chat/check-card.html
+++ b/templates/chat/check-card.html
@@ -1,2 +1,17 @@
-<div class="mnm3e chat-card check-card" data-actor-id="{{actor._id}}"><header class="card-header flexrow"><img src="{{actor.img}}" title="{{actor.name}}" width="36" height="36"/><h3 class="check-type">{{ cardLabel }}</h3></header><div class="card-content flexcol">{{{ rollTemplate }}}
-{{#if degrees}}<h3>{{ degrees.label }}</h3><div class="{{degrees.cssClass}}">{{ degrees.value }}</div>{{/if}}</div></div>
+<div class="mnm3e chat-card check-card" data-actor-id="{{actor._id}}">
+    <header class="card-header flexrow">
+        <img src="{{actor.img}}" title="{{actor.name}}" width="36" height="36" />
+        <h3 class="check-type">{{ cardLabel }}</h3>
+    </header>
+    <div class="card-content flexcol">
+        {{{ rollTemplate }}}
+        {{#if degrees}}
+            <h3>
+                {{ degrees.label }}
+            </h3>
+            <div class="{{degrees.cssClass}}">
+                {{ degrees.value }}
+            </div>
+        {{/if}}
+    </div>
+</div>
