--- a/templates/actors/parts/character-catalog.html
+++ b/templates/actors/parts/character-catalog.html
@@ -14,7 +14,14 @@
       type="power"
       canFavorite=true
 }}
-{{#if (or data.equipmentCost data.attributes.equipmentPoints)}}<div class="equipment-properties flexrow"><label>{{ localize "MNM3E.EquipmentPoints" }}:</label><span>{{ data.equipmentCost }} / {{ data.attributes.equipmentPoints }}</span></div>{{/if}}
+{{#if (or data.data.equipmentCost data.data.attributes.equipmentPoints)}}
+      <div class="equipment-properties flexrow">
+            <label>{{ localize "MNM3E.EquipmentPoints" }}:</label>
+            <span>
+                  {{ data.data.equipmentCost }} / {{ data.data.attributes.equipmentPoints }}
+            </span>
+      </div>
+{{/if}}
 {{>
       "systems/mnm3e/templates/items/parts/list-sheet.html"
       items=equipment
