--- a/templates/chat/basic-roll-card.html
+++ b/templates/chat/basic-roll-card.html
@@ -1,2 +1,13 @@
-<div class="mnm3e chat-card basic-roll-card" data-actor-id="{{actor._id}}"><header class="card-header flexrow"><img src="{{actor.img}}" title="{{actor.name}}" width="36" height="36"/><h3 class="check-type">{{ cardLabel }}</h3></header><div class="card-content flexcol">{{#if content }}<p>{{ content }}</p>{{/if}}
-{{{ rollTemplate }}}</div></div>
+<div class="mnm3e chat-card basic-roll-card" data-actor-id="{{actor._id}}">
+    <header class="card-header flexrow">
+        <img src="{{actor.img}}" title="{{actor.name}}" width="36" height="36" />
+        <h3 class="check-type">{{ cardLabel }}</h3>
+    </header>
+    <div class="card-content flexcol">
+        {{#if content }}
+            <p>
+                {{ content }}
+            </p>
+        {{/if}}
+    {{{ rollTemplate }}}</div>
+</div>
