--- a/templates/items/parts/cost-sheet.html
+++ b/templates/items/parts/cost-sheet.html
@@ -1,3 +1,33 @@
-{{#if (or item.isOwned (eq parentItem.type "equipment"))}}<div class="form-group input"><label>{{ localize "MNM3E.Rank" }}</label><input type="text" name="data.rank" value="{{data.rank}}" data-dtype="Number" placeholder="0"/></div>{{/if}}<div class="form-group select"><label>{{ localize "MNM3E.CostType" }}</label><div class="form-fields"><select name="data.cost.type">{{#select data.cost.type}}
-{{#each config.rankCostTypes as |localizedName name|}}<option value="{{name}}">{{ localizedName }}</option>{{/each}}
-{{/select}}</select></div></div><div class="form-group input-input"><label>{{#if (eq data.cost.type "discount")}} {{ localize "MNM3E.Discount" }} {{else}} {{ localize "MNM3E.Cost" }} {{/if}}</label><input type="text" name="data.cost.value" value="{{data.cost.value}}" data-dtype="Number" placeholder="0"/>{{#if (eq data.cost.type "discount")}}<span>{{ localize "MNM3E.DiscountPer" }}</span><input type="text" name="data.cost.discountPer" value="{{data.cost.discountPer}}" data-dtype="Number" placeholder="0"/>{{/if}}</div>
+{{#if (or item.isOwned (eq parentItem.type "equipment"))}}
+    <div class="form-group input">
+        <label>{{ localize "MNM3E.Rank"}}</label>
+        <input type="text" name="data.rank" value="{{data.data.rank}}" data-dtype="Number" placeholder="0" />
+    </div>
+{{/if}}
+<div class="form-group select">
+    <label>{{ localize "MNM3E.CostType" }}</label>
+    <div class="form-fields">
+        <select name="data.cost.type">
+            {{#select data.data.cost.type}}
+                {{#each config.rankCostTypes as |localizedName name|}}
+                    <option value="{{name}}">{{ localizedName }}</option>
+                {{/each}}
+            {{/select}}
+        </select>
+    </div>
+</div>
+<div class="form-group input-input">
+    <label>{{#if (eq data.cost.type "discount")}} 
+                {{ localize "MNM3E.Discount" }}
+            {{else}} 
+                {{ localize "MNM3E.Cost" }} 
+            {{/if}}
+    </label>
+    <input type="text" name="data.cost.value" value="{{data.data.cost.value}}" data-dtype="Number" placeholder="0" />
+{{#if (eq data.cost.type "discount")}}
+    <span>
+        {{localize "MNM3E.DiscountPer" }}
+    </span>
+    <input type="text" name="data.cost.discountPer" value="{{data.data.cost.discountPer}}" data-dtype="Number" placeholder="0" />
+{{/if}}
+</div>
