--- a/mnm3e.css
+++ b/mnm3e.css
@@ -33,6 +33,7 @@
 .mnm3e.sheet.app.summary-builder input {
   background: rgba(0, 0, 0, 0.05);
   border: 1px solid #7a7971;
+  font-family: "Raider Crusader", sans-serif;
 }
 .mnm3e.sheet.app.score-config form {
   border: 1px solid #145aa0;
@@ -53,6 +54,7 @@
   width: auto;
   background-color: #198cff;
   color: white;
+  font-family: "Raider Crusader", sans-serif;
   text-align: center;
   padding: 2px;
   border-radius: 6px;
@@ -68,6 +70,7 @@
 }
 .mnm3e.sheet.app.score-config .score-headers span:not(:first-child) {
   flex: 0 1 50px;
+  font-family: "Raider Crusader", sans-serif;
   text-align: center;
 }
 .mnm3e.sheet.app.score-config .score-control {
@@ -81,6 +84,7 @@
 .mnm3e.sheet.app.score-config .form-group.input input, .mnm3e.sheet.app.score-config .form-group.input-input input {
   flex: 0 1 50px;
   text-align: center;
+  font-family: "Raider Crusader", sans-serif;
   border: unset;
   border-left: 2px solid rgba(0, 0, 0, 0.1);
 }
@@ -121,21 +125,27 @@
 }
 .mnm3e.sheet.actor .sheet-header .header-details ul.attributes li.attribute {
   border-top: 1px solid rgba(20, 90, 160, 0.2);
+  font-family: "Raider Crusader", sans-serif;
   text-align: center;
   border-left: 1px solid rgba(20, 90, 160, 0.2);
   border-right: 1px solid rgba(20, 90, 160, 0.2);
+  font-family: "Raider Crusader", sans-serif;
 }
 .mnm3e.sheet.actor .sheet-header .header-details ul.attributes li.attribute .attribute-name {
+  font-family: "Raider Crusader", sans-serif;
   border-bottom: 1px groove rgba(25, 140, 255, 0.1);
   margin: 4px 8px 2px;
 }
 .mnm3e.sheet.actor .sheet-header .header-details ul.attributes li:last-child {
+  font-family: "Raider Crusader", sans-serif;
   border-right: none;
 }
 .mnm3e.sheet.actor .sheet-header .header-details ul.attributes .movement .attribute-footer {
+  font-family: "Raider Crusader", sans-serif;
   font-size: 10px;
 }
 .mnm3e.sheet.actor h3.section-header {
+  font-family: "Raider Crusader", sans-serif;
   text-align: center;
   flex: 0 1 auto;
   position: relative;
@@ -145,6 +155,7 @@
   display: none;
   bottom: 15%;
   margin-left: 2px;
+  font-family: "Raider Crusader", sans-serif;
   font-weight: normal;
 }
 .mnm3e.sheet.actor h3.section-header:hover .config-button {
@@ -155,27 +166,34 @@
   margin-right: 6px;
 }
 .mnm3e.sheet.actor .skill-section .untrained {
+  font-family: "Raider Crusader", sans-serif;
   color: grey;
 }
 .mnm3e.sheet.actor .skill-section .subskill-name {
+  font-family: "Raider Crusader", sans-serif;
   margin-left: 10px;
 }
 .mnm3e.sheet.actor .skill-section .skill-score {
+  font-family: "Raider Crusader", sans-serif;
   text-align: right;
   padding-left: 20px;
   padding-right: 10px;
 }
 .mnm3e.sheet.actor .skill-section ul {
+  font-family: "Raider Crusader", sans-serif;
   padding-left: 10px;
   white-space: nowrap;
 }
 .mnm3e.sheet.actor .item-list .item-controls {
+  font-family: "Raider Crusader", sans-serif;
   flex: 0 1 50px;
 }
 .mnm3e.sheet.actor .notes {
+  font-family: "Raider Crusader", sans-serif;
   overflow: hidden;
 }
 .mnm3e.sheet.actor .notes .notes-entries {
+  font-family: "Raider Crusader", sans-serif;
   background: #e4e4e4;
   border-radius: 5px;
   margin: 8px;
@@ -187,6 +205,7 @@
   border-bottom: 1px groove rgba(25, 140, 255, 0.1);
   margin-bottom: 0.5rem;
   padding-bottom: 0.25rem;
+  font-family: "Raider Crusader", sans-serif;
   font-size: 20px;
   font-weight: bold;
 }
@@ -207,6 +226,7 @@
   position: absolute;
   top: 2.5px;
   right: 5px;
+  font-family: "Raider Crusader", sans-serif;
   font-size: 1.25em;
 }
 .mnm3e.sheet.actor .notes .background-info {
@@ -221,6 +241,7 @@
   height: 18px;
   line-height: 16px;
   margin: 4px 8px 2px;
+  font-family: "Raider Crusader", sans-serif;
   font-size: 18px;
   white-space: nowrap;
   border-bottom: 1px solid #c9c7b8;
@@ -241,6 +262,7 @@
   border: 1px solid #145aa0;
   border-radius: 0 5px 0 5px;
   background: rgba(128, 128, 128, 0.1);
+  font-family: "Raider Crusader", sans-serif;
 }
 .mnm3e.sheet.actor.character .sheet-header .header-details .top-info .header-powerlevel .header-power {
   display: flex;
@@ -248,21 +270,26 @@
   white-space: nowrap;
   justify-content: flex-end;
   flex-direction: row;
+  font-family: "Raider Crusader", sans-serif;
 }
 .mnm3e.sheet.actor.character .sheet-header .header-details .top-info .header-powerlevel .header-power input {
   flex: 0 1 30px;
+  font-family: "Raider Crusader", sans-serif;
 }
 .mnm3e.sheet.actor.character .sheet-header .header-details .top-info .header-powerlevel .max-points {
   position: relative;
+  font-family: "Raider Crusader", sans-serif;
 }
 .mnm3e.sheet.actor.character .sheet-header .header-details .top-info .header-powerlevel .max-points .lock-button {
   position: absolute;
   display: none;
   margin-top: 5px;
   margin-left: -15px;
+  font-family: "Raider Crusader", sans-serif;
 }
 .mnm3e.sheet.actor.character .sheet-header .header-details .top-info .header-powerlevel .max-points:hover .lock-button {
   display: block;
+  font-family: "Raider Crusader", sans-serif;
 }
 .mnm3e.sheet.actor.character .cost-breakdown {
   flex: 0 1 auto;
@@ -272,9 +299,11 @@
   border-bottom: none;
   padding-top: 2px;
   text-align: center;
+  font-family: "Raider Crusader", sans-serif;
   font-size: 12px;
 }
 .mnm3e.sheet.actor.character .cost-breakdown .point-cost span {
+  font-family: "Raider Crusader", sans-serif;
   font-size: 12px;
   padding-left: 3px;
 }
@@ -320,14 +349,17 @@
   height: 30px;
   width: 36px;
   margin: 0 auto;
+  font-family: "Raider Crusader", sans-serif;
   font-size: 20px;
 }
 .mnm3e.sheet.actor.character .core-container .ability-section {
   text-align: center;
   margin-right: 6px;
+  font-family: "Raider Crusader", sans-serif;
 }
 .mnm3e.sheet.actor.character .core-container .defense {
   text-align: center;
+  font-family: "Raider Crusader", sans-serif;
   border-right: 1px solid rgba(20, 90, 160, 0.2);
 }
 .mnm3e.sheet.actor.character .core-container .defense:last-child {
@@ -387,6 +419,7 @@
   background-color: #e4e4e4;
 }
 .mnm3e.sheet .items-header {
+  font-family: "Raider Crusader", sans-serif;
   text-align: left;
   padding-left: 10px;
   margin: 0;
@@ -398,10 +431,12 @@
 .mnm3e.sheet .items-header .section-name {
   margin: 0;
   flex: 1;
+  font-family: "Raider Crusader", sans-serif;
   text-align: center;
   padding-right: 10px;
 }
 .mnm3e.sheet .items-header .item-control, .mnm3e.sheet .items-header .effect-control {
+  font-family: "Raider Crusader", sans-serif;
   text-align: right;
   flex: 0 1 75px;
 }
@@ -432,6 +467,7 @@
 .mnm3e.sheet .items-list .item-list .item .section-detail, .mnm3e.sheet .items-list .item-list .item .item-controls {
   border-left: 2px solid rgba(0, 0, 0, 0.1);
   text-align: center;
+  font-family: "Raider Crusader", sans-serif;
   margin: auto;
 }
 .mnm3e.sheet .items-list .item-list .item .section-detail {
@@ -511,11 +547,13 @@
 .mnm3e.sheet input[type=number] {
   background: none;
   border: 1px solid transparent;
+  font-family: "Raider Crusader", sans-serif;
 }
 .mnm3e.sheet input[type=text]:hover, .mnm3e.sheet input[type=text]:focus,
 .mnm3e.sheet input[type=number]:hover,
 .mnm3e.sheet input[type=number]:focus {
   border: 1px solid black;
+  font-family: "Raider Crusader", sans-serif;
 }
 
 .mnm3e.chat-card .hidable-toggle:hover {
@@ -539,11 +577,14 @@
 }
 .mnm3e.chat-card .card-content .descriptor, .mnm3e.chat-card .card-content .effect-summary {
   font-weight: bold;
+  font-family: "Raider Crusader", sans-serif;
 }
 .mnm3e.chat-card .card-content .effect-roll-type {
+  font-family: "Raider Crusader", sans-serif;
   text-align: left;
 }
 .mnm3e.chat-card .card-content .effect-versus {
+  font-family: "Raider Crusader", sans-serif;
   text-align: right;
 }
 .mnm3e.chat-card .card-content .card-description {
@@ -558,6 +599,7 @@
   border-top: 1px groove rgba(25, 140, 255, 0.1);
 }
 .mnm3e.chat-card .card-content .roll-request .effect-roll-type {
+  font-family: "Raider Crusader", sans-serif;
   text-align: center;
 }
 .mnm3e.chat-card .card-content .roll-request:last-of-type {
@@ -567,6 +609,7 @@
   border-bottom: none;
 }
 .mnm3e.chat-card .card-content .effect-footer span {
+  font-family: "Raider Crusader", sans-serif;
   font-size: 10px;
   padding-left: 5px;
   padding-right: 5px;
@@ -583,6 +626,7 @@
 }
 
 .four-fail, .three-fail, .two-fail, .one-fail, .one-success, .two-success, .three-success, .four-success {
+  font-family: "Raider Crusader", sans-serif;
   font-size: 20px;
   font-weight: bold;
   position: relative;
@@ -631,6 +675,7 @@
   flex: 0;
   border: 1px solid #145aa0;
   border-radius: 0 5px 0 5px;
+  font-family: "Raider Crusader", sans-serif;
   font-size: 16px;
   margin: 2px 2px 0 2px;
 }
@@ -653,6 +698,7 @@
 .mnm3e.sheet.actor.npc .traits-section .bordered-section:not(.skill-section) .scores .score {
   border: 1px solid rgba(20, 90, 160, 0.2);
   text-align: center;
+  font-family: "Raider Crusader", sans-serif;
 }
 .mnm3e.sheet.actor.npc .traits-section .bordered-section:not(.skill-section) .scores .score.ability {
   flex: 1 0 25%;
@@ -692,10 +738,12 @@
 }
 .mnm3e.sheet.item.power .sheet-body .description .power-properties .summary label {
   flex: 0 1 auto;
+  font-family: "Raider Crusader", sans-serif;
   font-size: 16px;
 }
 .mnm3e.sheet.item.power .sheet-body .description .power-properties .summary span {
   padding: 0 5px;
+  font-family: "Raider Crusader", sans-serif;
   font-size: 14.4px;
 }
 
@@ -708,6 +756,7 @@
 }
 .mnm3e.sheet.item .sheet-header .header-details .item-name input {
   margin: 0;
+  font-family: "Raider Crusader", sans-serif;
 }
 .mnm3e.sheet.item .sheet-header .header-details .header-attributes {
   align-items: center;
@@ -716,35 +765,44 @@
   list-style: none;
   border-top: 1px solid rgba(20, 90, 160, 0.2);
   border-bottom: 1px solid rgba(20, 90, 160, 0.2);
+  font-family: "Raider Crusader", sans-serif;
 }
 .mnm3e.sheet.item .sheet-header .header-details .item-subtitle {
   flex: 0 1 auto;
   text-align: right;
+  font-family: "Raider Crusader", sans-serif;
 }
 .mnm3e.sheet.item .sheet-header .header-details .item-summary {
   align-items: center;
   border-top: 1px solid rgba(20, 90, 160, 0.2);
   border-bottom: 1px solid rgba(20, 90, 160, 0.2);
+  font-family: "Raider Crusader", sans-serif;
 }
 .mnm3e.sheet.item .sheet-header .header-details .item-summary > * {
   flex: 0 1 auto;
   margin-left: 5px;
+  font-family: "Raider Crusader", sans-serif;
 }
 .mnm3e.sheet.item .sheet-header .header-details .item-summary .app-button {
   display: none;
+  font-family: "Raider Crusader", sans-serif;
 }
 .mnm3e.sheet.item .sheet-header .header-details .item-summary:hover .app-button {
   display: inline-flex;
+  font-family: "Raider Crusader", sans-serif;
 }
 .mnm3e.sheet.item .sheet-navigation.tabs {
   margin-top: 4px;
+  font-family: "Raider Crusader", sans-serif;
 }
 .mnm3e.sheet.item .sheet-body {
+  font-family: "Raider Crusader", sans-serif;
   border: 3px solid #198cff;
   border-top: none;
   padding: 6px;
 }
 .mnm3e.sheet.item .sheet-body .editor {
+  font-family: "Raider Crusader", sans-serif;
   margin: 5px 0;
 }
 .mnm3e.sheet.item .sheet-body .form-group:not(.form-group.expanding-group) {
@@ -757,6 +815,7 @@
 }
 .mnm3e.sheet.item .sheet-body .form-group:not(.form-group.expanding-group) input, .mnm3e.sheet.item .sheet-body .form-group:not(.form-group.expanding-group) select {
   background: rgba(255, 255, 255, 0.25);
+  font-family: "Raider Crusader", sans-serif;
 }
 .mnm3e.sheet.item .sheet-body .item-properties {
   margin-right: 5px;
@@ -769,11 +828,14 @@
 }
 .mnm3e.sheet.item .sheet-body .item-properties .form-group input {
   text-align: right;
+  font-family: "Raider Crusader", sans-serif;
 }
 .mnm3e.sheet.item .sheet-body .item-properties .form-group.input-input span {
   padding: 0 5px;
+  font-family: "Raider Crusader", sans-serif;
 }
 .mnm3e.sheet.item .sheet-body .details .form-header, .mnm3e.sheet.item .sheet-body .details .formula-builder-header, .mnm3e.sheet.item .sheet-body .overrides .form-header, .mnm3e.sheet.item .sheet-body .overrides .formula-builder-header {
+  font-family: "Raider Crusader", sans-serif;
   font-size: 16px;
   font-weight: bold;
 }
@@ -784,6 +846,7 @@
 .mnm3e.sheet.item .sheet-body .details .form-group.effect-uses span, .mnm3e.sheet.item .sheet-body .overrides .form-group.effect-uses span {
   flex: 0 1 20px;
   text-align: center;
+  font-family: "Raider Crusader", sans-serif;
 }
 .mnm3e.sheet.item .sheet-body .details .form-group.expanding-group .formula-content, .mnm3e.sheet.item .sheet-body .overrides .form-group.expanding-group .formula-content {
   margin-left: 10px;
@@ -795,9 +858,11 @@
 }
 .mnm3e.sheet.item .sheet-body .details .form-group.expanding-group .formula-content .formula-builder-header a, .mnm3e.sheet.item .sheet-body .overrides .form-group.expanding-group .formula-content .formula-builder-header a {
   text-align: right;
+  font-family: "Raider Crusader", sans-serif;
 }
 .mnm3e.sheet.item .sheet-body .details .form-group.expanding-group .formula-content .formula-builder > input, .mnm3e.sheet.item .sheet-body .overrides .form-group.expanding-group .formula-content .formula-builder > input {
   flex: 1;
+  font-family: "Raider Crusader", sans-serif;
 }
 .mnm3e.sheet.item .sheet-body .details .form-group.expanding-group .formula-content .formula-builder > :first-child, .mnm3e.sheet.item .sheet-body .details .form-group.expanding-group .formula-content .formula-builder > :last-child, .mnm3e.sheet.item .sheet-body .overrides .form-group.expanding-group .formula-content .formula-builder > :first-child, .mnm3e.sheet.item .sheet-body .overrides .form-group.expanding-group .formula-content .formula-builder > :last-child {
   flex: 0;
@@ -810,6 +875,7 @@
   border: none;
   cursor: unset;
   background: none;
+  font-family: "Raider Crusader", sans-serif;
 }
 .mnm3e.sheet.item .sheet-body .details .form-group.expanding-group .formula-content .formula-builder a, .mnm3e.sheet.item .sheet-body .overrides .form-group.expanding-group .formula-content .formula-builder a {
   margin-left: auto;
