--- a/mnm3e.css
+++ b/mnm3e.css
@@ -27,6 +27,10 @@
   border: 1px solid #7a7971;
 }
 
+.sheet{
+  max-width: 662px;
+  max-height: 620px;
+}
 .mnm3e.sheet.app.summary-builder .form-fields {
   flex: 0;
 }
@@ -384,10 +388,13 @@
 .window-app .window-content {
   background-image: url("assets/images/59427.jpg");
   background-size: 662px 620px;
+  max-width: 662px;
+  max-height: 620px;
   background-repeat: no-repeat;
 }
 
 .mnm3e.sheet .rollable:hover {
+  transform: rotate(2deg);
   text-shadow: 0 0 8px red;
 }
 .mnm3e.sheet .sheet-header {
