--- a/templates/items/modifier-sheet.html
+++ b/templates/items/modifier-sheet.html
@@ -1,6 +1,6 @@
 <form class="{{cssClass}} item-sheet-modifier flexcol" autocomplete="off">
     <header class="sheet-header flexrow">
-        {> "systems/mnm3e/templates/items/parts/header-sheet.html" showSummary=true }}
+        {{> "systems/mnm3e/templates/items/parts/header-sheet.html" showSummary=true }}
     </header>
     <nav class="sheet-navigation tabs" data-group="primary">
         <a class="item active" data-tab="description">
